# CanopyVoxel

./: .gitignore  process.py  pyproject.toml  test.py  visualize.py
NewRenderer/: __init__.py  test.py
NewRenderer/fun code/: sphere_demo.py
process/: process.py
renderer/: __init__.py  camera.py  chunk.py  chunk_helpers.py  flying_camera.py  requirements.txt  scene.py  shader_program.py  voxel_engine.py  voxel_manager.py  world.py
renderer/addons/: grid_importer.py  plane.py
renderer/meshes/: base_mesh.py  chunk_mesh.py  cube_chunk_mesh_builder.py
renderer/shaders/: chunk.frag  chunk.vert
