[tool.poetry]
name = "canopy voxelation"
version = "0.1.0"
description = ""
authors = ["Lukas Olson <lukasdragon@live.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
tqdm = "^4.66.1"
pyntcloud = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
